--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 .header-nav {
     margin-top: 20px;
     margin-bottom: 0;
@@ -10,21 +9,17 @@
     color: #7d97ad;
     min-height: 85px;
 }
-
 .header-container {
     width: 100%;
 }
-
 .header-left {
     float: left;
     margin-left: 40px;
 }
-
 .header-right {
     float: right;
     margin-right: 40px;
 }
-
 .header-name {
     font-family: 'Poiret One', cursive;
     font-weight: 100;
@@ -32,7 +27,6 @@
     color: #2d3c49;
     text-transform: uppercase;
 }
-
 .header-sub-name {
     font-family: 'Open Sans';
     font-size: 20px;
@@ -41,21 +35,17 @@
     text-transform: uppercase;
     float: right;
 }
-
 .body-container {
     padding: 40px;
 }
-
 .image-one {
     padding-top: 20px;
     padding-right: 40px;
 }
-
 .image-two {
     padding-top: 20px;
     padding-right: 20px;
 }
-
 .featured {
     font-family: 'Open Sans';
     font-size: 40px;
@@ -63,7 +53,6 @@
     padding-top: 10px;
     width: 100%;
 }
-
 .title {
     text-align: center;
     font-family: 'Open Sans';
@@ -72,20 +61,18 @@
     color: #2d3c49;
     text-transform: uppercase;
 }
-
 .images {
     display: block;
     margin: 0 auto;
     width: 100%:
 }
-
+img {
+    display: block;
+    margin: 0 auto;
+}
 .url-link {
     color: #2d3c49;
     padding: 1em;
     font-weight: 100;
     font-size: 14px;
-}
-
-.article-text {
-    color: #2d3c49;
 }
