--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,20 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 .header-nav {
     margin-top: 20px;
     margin-bottom: 0;
     background-color: #FFF;
     border-bottom: solid 3px;
     color: #7d97ad;
-    min-height: 85px;
+    min-height: 100px;
 }
+
 .header-container {
     width: 100%;
 }
-.header-left {
-    float: left;
-    margin-left: 40px;
-}
-.header-right {
-    float: right;
-    margin-right: 40px;
-}
+
 .header-name {
     font-family: 'Poiret One', cursive;
     font-weight: 100;
@@ -27,25 +22,29 @@
     color: #2d3c49;
     text-transform: uppercase;
 }
+
 .header-sub-name {
     font-family: 'Open Sans';
     font-size: 20px;
     font-weight: 200;
     color: #2d3c49;
     text-transform: uppercase;
-    float: right;
 }
+
 .body-container {
     padding: 40px;
 }
+
 .image-one {
     padding-top: 20px;
     padding-right: 40px;
 }
+
 .image-two {
     padding-top: 20px;
     padding-right: 20px;
 }
+
 .featured {
     font-family: 'Open Sans';
     font-size: 40px;
@@ -53,6 +52,7 @@
     padding-top: 10px;
     width: 100%;
 }
+
 .title {
     text-align: center;
     font-family: 'Open Sans';
@@ -61,18 +61,31 @@
     color: #2d3c49;
     text-transform: uppercase;
 }
+
 .images {
     display: block;
     margin: 0 auto;
     width: 100%:
 }
-img {
-    display: block;
-    margin: 0 auto;
-}
+
 .url-link {
     color: #2d3c49;
     padding: 1em;
     font-weight: 100;
     font-size: 14px;
+}
+
+.article-text {
+    color: #2d3c49;
+}
+
+.main-image {
+    width: 100%;
+}
+
+@media (max-width: 767px) {
+  .small-image {
+    width: 100%;
+    height: auto;
+  }
 }
